# openclaw-github-hooks

./: Dockerfile  pyproject.toml
.github/workflows/: build.yml
src/openclaw_github_hooks/: dedup.py  filters.py  forwarder.py  main.py  observability.py  verify.py
tests/: test_dedup.py  test_filters.py  test_forwarder.py  test_main.py  test_observability.py  test_verify.py
